<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.yogyakartaandroidcommunity.yac.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="@dimen/dimen_32dp"
            android:paddingRight="@dimen/dimen_32dp"
            android:src="@drawable/bg_yac_white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAbsen"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/style_button"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTop="@drawable/absen"
                android:onClick="HandleClick"
                android:text="@string/text_btn_absen"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnNewProfil"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTop="@drawable/new_member"
                android:onClick="HandleClick"
                android:text="@string/text_btn_new_member"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8dp"
            android:layout_weight="5"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnHadir"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/style_button"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTop="@drawable/daftar_hadir"
                android:onClick="HandleClick"
                android:text="@string/text_btn_daftar_Hadir"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/btnProfil"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button"
                android:drawablePadding="@dimen/dimen_8dp"
                android:drawableTop="@drawable/profil_member"
                android:onClick="HandleClick"
                android:text="@string/text_btn_profil_member"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bg" />
</LinearLayout>
